Some more tempest exclude tweaks

--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -2,31 +2,31 @@
 api.network.test_fwaas
 # Same here: no deployment yet of LBaaS
 api.network.test_load_balancer
+api.network.admin.test_load_balancer
 scenario.test_load_balancer
+network.admin.test_lbaas
 # Same again: no deployment of VPNaaS
 api.network.test_vpnaas
 
-# TODO: These are failing for some reason:
-scenario.test_dashboard_basic_ops.TestDashboardBasicOps.test_basic_scenario
-scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_cryptsetup
-scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_luks
-scenario.test_load_balancer_basic.TestLoadBalancerBasic.test_load_balancer_basic
-scenario.test_minimum_basic.TestMinimumBasicScenario.test_minimum_basic_scenario
-scenario.test_volume_boot_pattern.TestVolumeBootPattern.test_volume_boot_pattern
-scenario.test_volume_boot_pattern.TestVolumeBootPatternV2.test_volume_boot_pattern
+# Volume None failed to reach in-use status within the required time (300 s).
+compute.servers.test_delete_server.DeleteServersTestJSON.test_delete_server_while_in_attached_volume
+compute.servers.test_server_rescue_negative.ServerRescueNegativeTestJSON.test_rescued_vm_detach_volume
+compute.servers.test_server_rescue_negative.ServerRescueNegativeTestXML.test_rescued_vm_detach_volume
+
+# Volume backup 20d9e4c1-79c5-4a60-b91c-78615d31c12f failed and is in ERROR status
+api.volume.admin.test_volumes_backup.VolumesBackupsTest.test_volume_backup_create_get_detailed_list_restore_delete
+
+# Router e5a0a572-0b3c-47bd-8e55-5202cfebda8b could not be found
+scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_reboot
 
 # Router not found issue
-scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_pause_unpause
-scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_rebuild
-scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_suspend_resume
-scenario.test_network_basic_ops.TestNetworkBasicOps.test_hotplug_nic
-scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops
-scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_cross_tenant_traffic
-scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_in_tenant_traffic
-scenario.test_load_balancer
-
-# Floating IP not found issue
-scenario.test_snapshot_pattern.TestSnapshotPattern.test_snapshot_pattern
+#scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_pause_unpause
+#scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_rebuild
+#scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_suspend_resume
+#scenario.test_network_basic_ops.TestNetworkBasicOps.test_hotplug_nic
+#scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops
+#scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_cross_tenant_traffic
+#scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_in_tenant_traffic
 
 # We don't have S3 or EC2 installed
 thirdparty.boto.test_s3
