--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -9,9 +9,18 @@ network.admin.test_lbaas
 api.network.test_vpnaas
 
 # Volume None failed to reach in-use status within the required time (300 s).
+api.compute.servers.test_delete_server.DeleteServersTestXML.test_delete_server_while_in_attached_volume
 compute.servers.test_delete_server.DeleteServersTestJSON.test_delete_server_while_in_attached_volume
 compute.servers.test_server_rescue_negative.ServerRescueNegativeTestJSON.test_rescued_vm_detach_volume
 compute.servers.test_server_rescue_negative.ServerRescueNegativeTestXML.test_rescued_vm_detach_volume
+scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_cryptsetup
+scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_luks
+
+# Unable to complete operation on subnet cc9d1984-2374-41af-b877-2f2bfd56de5a. One or more ports have an IP allocation from this subnet.
+scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes
+
+# TestMinimumBasicScenario:test_minimum_basic_scenario) Server f2ff819b-8060-4316-b446-c163054a10e3 failed to reach ACTIVE status and task state "None" within the required time (300 s). Current status: BUILD. Current task state: spawning.
+scenario.test_minimum_basic.TestMinimumBasicScenario.test_minimum_basic_scenario
 
 # Volume backup 20d9e4c1-79c5-4a60-b91c-78615d31c12f failed and is in ERROR status
 api.volume.admin.test_volumes_backup.VolumesBackupsTest.test_volume_backup_create_get_detailed_list_restore_delete
@@ -20,13 +29,20 @@ api.volume.admin.test_volumes_backup.VolumesBackupsTest.test_volume_backup_creat
 scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_reboot
 
 # Router not found issue
-#scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_pause_unpause
-#scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_rebuild
-#scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_suspend_resume
-#scenario.test_network_basic_ops.TestNetworkBasicOps.test_hotplug_nic
-#scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops
-#scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_cross_tenant_traffic
-#scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_in_tenant_traffic
+scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_pause_unpause
+scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_rebuild
+scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_suspend_resume
+scenario.test_network_basic_ops.TestNetworkBasicOps.test_hotplug_nic
+scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops
+scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_cross_tenant_traffic
+scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_in_tenant_traffic
+
+# Build of instance 7f59bd5e-dd99-4131-b0fc-708cf0fc8577 aborted: Failure prepping block device.
+scenario.test_volume_boot_pattern.TestVolumeBootPattern.test_volume_boot_pattern
+scenario.test_volume_boot_pattern.TestVolumeBootPatternV2.test_volume_boot_pattern
+
+# Mismatch of HTML output
+test_dashboard_basic_ops.TestDashboardBasicOps.test_basic_scenario
 
 # We don't have S3 or EC2 installed
 thirdparty.boto.test_s3
