More exclude fix

--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -1,14 +1,14 @@
-# No deployment of FWaaS, so we exclude them
+# No deployments for these
 api.network.test_fwaas
-# Same here: no deployment yet of LBaaS
 api.network.test_load_balancer
 api.network.admin.test_load_balancer
 scenario.test_load_balancer
 network.admin.test_lbaas
-# Same again: no deployment of VPNaaS
 api.network.test_vpnaas
+thirdparty.boto.test_s3
+thirdparty.boto.test_ec2
 
-# Volume None failed to reach in-use status within the required time (300 s).
+# Volume None failed to reach in-use status within the required time
 api.compute.servers.test_delete_server.DeleteServersTestXML.test_delete_server_while_in_attached_volume
 compute.servers.test_delete_server.DeleteServersTestJSON.test_delete_server_while_in_attached_volume
 compute.servers.test_server_rescue_negative.ServerRescueNegativeTestJSON.test_rescued_vm_detach_volume
@@ -19,7 +19,7 @@ scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted
 # Unable to complete operation on subnet cc9d1984-2374-41af-b877-2f2bfd56de5a. One or more ports have an IP allocation from this subnet.
 scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes
 
-# TestMinimumBasicScenario:test_minimum_basic_scenario) Server f2ff819b-8060-4316-b446-c163054a10e3 failed to reach ACTIVE status and task state "None" within the required time (300 s). Current status: BUILD. Current task state: spawning.
+# TestMinimumBasicScenario:test_minimum_basic_scenario) Server f2ff819b-8060-4316-b446-c163054a10e3 failed to reach ACTIVE status and task state None within the required time 300 s. Current status: BUILD. Current task state: spawning.
 scenario.test_minimum_basic.TestMinimumBasicScenario.test_minimum_basic_scenario
 
 # Volume backup 20d9e4c1-79c5-4a60-b91c-78615d31c12f failed and is in ERROR status
@@ -43,7 +43,3 @@ scenario.test_volume_boot_pattern.TestVolumeBootPatternV2.test_volume_boot_patte
 
 # Mismatch of HTML output
 test_dashboard_basic_ops.TestDashboardBasicOps.test_basic_scenario
-
-# We don't have S3 or EC2 installed
-thirdparty.boto.test_s3
-thirdparty.boto.test_ec2
