More exclude tweaks again and again

--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -1,34 +1,53 @@
-# No deployments for these
+api.compute.servers.test_delete_server.DeleteServersTestJSON.test_delete_server_while_in_attached_volume
+api.compute.servers.test_delete_server.DeleteServersTestXML.test_delete_server_while_in_attached_volume
+api.compute.servers.test_server_rescue_negative.ServerRescueNegativeTestJSON.test_rescued_vm_detach_volume
+api.compute.servers.test_server_rescue_negative.ServerRescueNegativeTestXML.test_rescued_vm_detach_volume
+api.network.admin.test_lbaas_agent_scheduler.LBaaSAgentSchedulerTestJSON
+api.network.admin.test_lbaas_agent_scheduler.LBaaSAgentSchedulerTestXML
+api.network.admin.test_load_balancer_admin_actions.LoadBalancerAdminTestJSON
+api.network.admin.test_load_balancer_admin_actions.LoadBalancerAdminTestXML
+api.network.test_fwaas_extensions.FWaaSExtensionTestJSON
+api.network.test_fwaas_extensions.FWaaSExtensionTestXML
+api.network.test_load_balancer.LoadBalancerTestJSON
+api.network.test_load_balancer.LoadBalancerTestXML
+api.network.test_vpnaas_extensions.VPNaaSTestJSON
+api.network.test_vpnaas_extensions.VPNaaSTestXML
+api.volume.admin.test_volumes_backup.VolumesBackupsTest.test_volume_backup_create_get_detailed_list_restore_delete
+scenario.test_dashboard_basic_ops.TestDashboardBasicOps.test_basic_scenario
+scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_cryptsetup
+scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_luks
+scenario.test_load_balancer_basic.TestLoadBalancerBasic.test_load_balancer_basic
+scenario.test_minimum_basic.TestMinimumBasicScenario.test_minimum_basic_scenario
+scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_pause_unpause
+scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_reboot
+scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_rebuild
+scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_suspend_resume
+scenario.test_network_basic_ops.TestNetworkBasicOps.test_hotplug_nic
+scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops
+scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_cross_tenant_traffic
+scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_in_tenant_traffic
+scenario.test_volume_boot_pattern.TestVolumeBootPattern.test_volume_boot_pattern
+scenario.test_volume_boot_pattern.TestVolumeBootPatternV2.test_volume_boot_pattern
+thirdparty.boto.test_ec2_keys.EC2KeysTest.test_create_ec2_keypair
+thirdparty.boto.test_ec2_volumes.EC2VolumesTest
+thirdparty.boto.test_s3_buckets.S3BucketsTest.test_create_and_get_delete_bucket
+thirdparty.boto.test_s3_buckets.S3BucketsTest
 api.network.test_fwaas
 api.network.test_load_balancer
 api.network.admin.test_load_balancer
 scenario.test_load_balancer
 network.admin.test_lbaas
 api.network.test_vpnaas
-thirdparty.boto.test_s3
-thirdparty.boto.test_ec2
-
-# Volume None failed to reach in-use status within the required time
 api.compute.servers.test_delete_server.DeleteServersTestXML.test_delete_server_while_in_attached_volume
 compute.servers.test_delete_server.DeleteServersTestJSON.test_delete_server_while_in_attached_volume
 compute.servers.test_server_rescue_negative.ServerRescueNegativeTestJSON.test_rescued_vm_detach_volume
 compute.servers.test_server_rescue_negative.ServerRescueNegativeTestXML.test_rescued_vm_detach_volume
 scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_cryptsetup
 scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_luks
-
-# Unable to complete operation on subnet cc9d1984-2374-41af-b877-2f2bfd56de5a. One or more ports have an IP allocation from this subnet.
 scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes
-
-# TestMinimumBasicScenario:test_minimum_basic_scenario) Server f2ff819b-8060-4316-b446-c163054a10e3 failed to reach ACTIVE status and task state None within the required time 300 s. Current status: BUILD. Current task state: spawning.
 scenario.test_minimum_basic.TestMinimumBasicScenario.test_minimum_basic_scenario
-
-# Volume backup 20d9e4c1-79c5-4a60-b91c-78615d31c12f failed and is in ERROR status
 api.volume.admin.test_volumes_backup.VolumesBackupsTest.test_volume_backup_create_get_detailed_list_restore_delete
-
-# Router e5a0a572-0b3c-47bd-8e55-5202cfebda8b could not be found
 scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_reboot
-
-# Router not found issue
 scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_pause_unpause
 scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_rebuild
 scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_suspend_resume
@@ -36,10 +55,8 @@ scenario.test_network_basic_ops.TestNetworkBasicOps.test_hotplug_nic
 scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops
 scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_cross_tenant_traffic
 scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_in_tenant_traffic
-
-# Build of instance 7f59bd5e-dd99-4131-b0fc-708cf0fc8577 aborted: Failure prepping block device.
 scenario.test_volume_boot_pattern.TestVolumeBootPattern.test_volume_boot_pattern
 scenario.test_volume_boot_pattern.TestVolumeBootPatternV2.test_volume_boot_pattern
-
-# Mismatch of HTML output
-test_dashboard_basic_ops.TestDashboardBasicOps.test_basic_scenario
+scenario.test_dashboard_basic_ops.TestDashboardBasicOps.test_basic_scenario
+thirdparty.boto.test_s3
+thirdparty.boto.test_ec2
