--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -7,3 +7,24 @@ network.admin.test_lbaas
 api.network.test_vpnaas
 thirdparty.boto.test_s3
 thirdparty.boto.test_ec2
+
+# Failed to investigate
+api.compute.servers.test_delete_server.DeleteServersTestJSON.test_delete_server_while_in_attached_volume
+api.compute.servers.test_delete_server.DeleteServersTestXML.test_delete_server_while_in_attached_volume
+api.compute.servers.test_server_rescue_negative.ServerRescueNegativeTestJSON.test_rescued_vm_detach_volume
+api.compute.servers.test_server_rescue_negative.ServerRescueNegativeTestXML.test_rescued_vm_detach_volume
+api.volume.admin.test_volumes_backup.VolumesBackupsTest.test_volume_backup_create_get_detailed_list_restore_delete
+scenario.test_dashboard_basic_ops.TestDashboardBasicOps.test_basic_scenario
+scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_cryptsetup
+scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_luks
+scenario.test_minimum_basic.TestMinimumBasicScenario.test_minimum_basic_scenario
+scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_pause_unpause
+scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_reboot
+scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_rebuild
+scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_suspend_resume
+scenario.test_network_basic_ops.TestNetworkBasicOps.test_hotplug_nic
+scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops
+scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_cross_tenant_traffic
+scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_in_tenant_traffic
+scenario.test_volume_boot_pattern.TestVolumeBootPattern.test_volume_boot_pattern
+scenario.test_volume_boot_pattern.TestVolumeBootPatternV2.test_volume_boot_pattern
