Is this the last exclude patch? :)

--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -8,6 +8,9 @@ api.network.test_vpnaas
 thirdparty.boto.test_s3
 thirdparty.boto.test_ec2
 
+api.network.admin.test_lbaas_agent_scheduler.LBaaSAgentSchedulerTestJSON
+api.network.admin.test_lbaas_agent_scheduler.LBaaSAgentSchedulerTestXML
+
 # Failed to investigate
 api.compute.servers.test_delete_server.DeleteServersTestJSON.test_delete_server_while_in_attached_volume
 api.compute.servers.test_delete_server.DeleteServersTestXML.test_delete_server_while_in_attached_volume
