--- a/debian/control
+++ b/debian/control
@@ -79,7 +79,7 @@ Depends: ceilometer-agent-central,
          neutron-l3-agent,
          neutron-metadata-agent,
          neutron-plugin-openvswitch,
-         neutron-plugin-openvswitch-agent,
+         neutron-plugin-openvswitch-agent | neutron-openvswitch-agent,
          neutron-server,
          nova-api,
          nova-conductor,
