--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
 Uploaders: Thomas Goirand <zigo@debian.org>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.6
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/openstack-meta-packages.git;a=summary
+Vcs-Browser: https://anonscm.debian.org/cgit/openstack/openstack-meta-packages.git
 Vcs-Git: git://anonscm.debian.org/openstack/openstack-meta-packages.git
 Homepage: http://openstack.alioth.debian.org/
 
