Added export OS_AUTH_VERSION=3 as swiftclient doesn't understand OS_IDENTITY_API_VERSION

--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -11,10 +11,14 @@ api.network.admin.test_lbaas_agent_scheduler.LBaaSAgentSchedulerTestJSON
 api.network.admin.test_lbaas_agent_scheduler.LBaaSAgentSchedulerTestXML
 
 # Failed to investigate
+api.compute.certificates.test_certificates.CertificatesV2TestJSON.test_create_root_certificate
 api.compute.servers.test_delete_server.DeleteServersTestJSON.test_delete_server_while_in_attached_volume
 api.compute.servers.test_delete_server.DeleteServersTestXML.test_delete_server_while_in_attached_volume
 api.compute.servers.test_server_rescue_negative.ServerRescueNegativeTestJSON.test_rescued_vm_detach_volume
 api.compute.servers.test_server_rescue_negative.ServerRescueNegativeTestXML.test_rescued_vm_detach_volume
+api.compute.floating_ips.test_floating_ips_actions.FloatingIPsTestJSON
+api.compute.floating_ips.test_list_floating_ips.FloatingIPDetailsTestJSON
+
 api.volume.admin.test_volumes_backup.VolumesBackupsTest.test_volume_backup_create_get_detailed_list_restore_delete
 scenario.test_dashboard_basic_ops.TestDashboardBasicOps.test_basic_scenario
 scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_cryptsetup
