Add fuel-agent to the master node so it has the fa_build_image available.

--- a/debian/control
+++ b/debian/control
@@ -217,6 +217,7 @@ Architecture: all
 Pre-Depends: fuel-master-node-services
 Depends: astute,
          cobbler,
+         fuel-agent,
          fuel-web-apache,
          fuel-web-static,
          mcollective,
