--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Uploaders: Thomas Goirand <zigo@debian.org>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.6
 Homepage: http://openstack.alioth.debian.org/
-Vcs-Browser: https://anonscm.debian.org/cgit/openstack/openstack-meta-packages.git
-Vcs-Git: git://anonscm.debian.org/openstack/openstack-meta-packages.git
+Vcs-Browser: https://anonscm.debian.org/cgit/openstack/openstack-meta-packages.git/
+Vcs-Git: https://anonscm.debian.org/git/openstack/openstack-meta-packages.git
 
 Package: openstack-clients
 Architecture: all
