fuel-master-node now depends on fuel-ui and not fuel-web-static.

--- a/debian/control
+++ b/debian/control
@@ -220,7 +220,7 @@ Depends: astute,
          fuel-agent,
          fuel-misc,
          fuel-web-apache,
-         fuel-web-static,
+         fuel-ui,
          mcollective,
          nailgun-api,
          nailgun-assassin,
