--- a/saio/swift/proxy-server.conf
+++ b/saio/swift/proxy-server.conf
@@ -84,7 +84,7 @@ eventlet_debug = true
 # The following pipeline shows keystone integration. Comment out the one
 # above and uncomment this one. Additional steps for integrating keystone are
 # covered further below in the filter sections for authtoken and keystoneauth.
-pipeline = catch_errors gatekeeper healthcheck proxy-logging cache container_sync bulk tempurl ratelimit authtoken keystoneauth container-quotas account-quotas slo dlo versioned_writes proxy-logging proxy-server
+pipeline = catch_errors gatekeeper healthcheck proxy-logging cache container_sync bulk tempurl ratelimit formpost authtoken keystoneauth staticweb container-quotas account-quotas slo dlo versioned_writes proxy-logging proxy-server
 
 [app:proxy-server]
 use = egg:swift#proxy
@@ -738,4 +738,4 @@ use = egg:swift#versioned_writes
 # WARNING: Setting this option bypasses the "allow_versions" option
 # in the container configuration file, which will be eventually
 # deprecated. See documentation for more details.
-# allow_versioned_writes = false
+allow_versioned_writes = true
