Reworked the tempest blacklist of tests.

--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -1,36 +1,84 @@
 # Do not tests things we do not deploy
-api.network.test_fwaas
-api.network.test_load_balancer
-api.network.admin.test_load_balancer
-scenario.test_load_balancer
-network.admin.test_lbaas
-api.network.test_vpnaas
-thirdparty.boto.test_s3
+tempest.api.network.test_fwaas
+tempest.api.network.test_load_balancer
+tempest.api.network.admin.test_load_balancer
+tempest.scenario.test_load_balancer
+tempest.network.admin.test_lbaas
+tempest.api.network.test_vpnaas
+tempest.thirdparty.boto.test_s3
 
-api.network.admin.test_lbaas_agent_scheduler.LBaaSAgentSchedulerTestJSON
-api.network.admin.test_lbaas_agent_scheduler.LBaaSAgentSchedulerTestXML
+tempest.api.network.admin.test_lbaas_agent_scheduler.LBaaSAgentSchedulerTestJSON
+tempest.api.network.admin.test_lbaas_agent_scheduler.LBaaSAgentSchedulerTestXML
 
 # Failed to investigate
-api.compute.certificates.test_certificates.CertificatesV2TestJSON.test_create_root_certificate
-api.compute.servers.test_delete_server.DeleteServersTestJSON.test_delete_server_while_in_attached_volume
-api.compute.servers.test_delete_server.DeleteServersTestXML.test_delete_server_while_in_attached_volume
-api.compute.servers.test_server_rescue_negative.ServerRescueNegativeTestJSON.test_rescued_vm_detach_volume
-api.compute.servers.test_server_rescue_negative.ServerRescueNegativeTestXML.test_rescued_vm_detach_volume
-api.compute.floating_ips.test_floating_ips_actions.FloatingIPsTestJSON
-api.compute.floating_ips.test_list_floating_ips.FloatingIPDetailsTestJSON
+tempest.api.compute.servers.test_list_server_filters.ListServerFiltersTestJSON
+tempest.api.compute.servers.test_delete_server.DeleteServersTestJSON.test_delete_server_while_in_attached_volume
+tempest.api.compute.servers.test_server_rescue_negative.ServerRescueNegativeTestJSON.test_rescued_vm_detach_volume
+tempest.api.compute.servers.test_server_rescue.ServerRescueTestJSON
 
-api.volume.admin.test_volumes_backup.VolumesBackupsTest.test_volume_backup_create_get_detailed_list_restore_delete
-scenario.test_dashboard_basic_ops.TestDashboardBasicOps.test_basic_scenario
-scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_cryptsetup
-scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_luks
-scenario.test_minimum_basic.TestMinimumBasicScenario.test_minimum_basic_scenario
-scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_pause_unpause
-scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_reboot
-scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_rebuild
-scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_suspend_resume
-scenario.test_network_basic_ops.TestNetworkBasicOps.test_hotplug_nic
-scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops
-scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_cross_tenant_traffic
-scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_in_tenant_traffic
-scenario.test_volume_boot_pattern.TestVolumeBootPattern.test_volume_boot_pattern
-scenario.test_volume_boot_pattern.TestVolumeBootPatternV2.test_volume_boot_pattern
+tempest.api.compute.certificates.test_certificates.CertificatesV2TestJSON.test_create_root_certificate
+
+tempest.api.compute.floating_ips.test_floating_ips_actions.FloatingIPsTestJSON
+tempest.api.compute.floating_ips.test_list_floating_ips.FloatingIPDetailsTestJSON
+
+tempest.api.object_storage.test_container_sync_middleware.ContainerSyncMiddlewareTest.test_container_synchronization
+tempest.api.object_storage.test_crossdomain.CrossdomainTest.test_get_crossdomain_policy
+
+tempest.api.orchestration.stacks.test_nova_keypair_resources.NovaKeyPairResourcesYAMLTest
+
+tempest.api.orchestration.stacks.test_volumes.CinderResourcesTest.test_cinder_volume_create_delete
+tempest.api.orchestration.stacks.test_volumes.CinderResourcesTest.test_cinder_volume_create_delete_retain
+tempest.api.orchestration.stacks.test_environment.StackEnvironmentTest.test_environment_parameter
+tempest.api.orchestration.stacks.test_environment.StackEnvironmentTest.test_environment_provider_resource
+tempest.api.orchestration.stacks.test_environment.StackEnvironmentTest.test_files_provider_resource
+tempest.api.orchestration.stacks.test_non_empty_stack.StacksTestJSON
+tempest.api.orchestration.stacks.test_nova_keypair_resources.NovaKeyPairResourcesAWSTest
+tempest.api.orchestration.stacks.test_resource_types.ResourceTypesTest.test_resource_type_list
+tempest.api.orchestration.stacks.test_swift_resources.SwiftResourcesTestJSON
+tempest.api.orchestration.stacks.test_templates.TemplateAWSTestJSON
+tempest.api.orchestration.stacks.test_templates.TemplateYAMLTestJSON
+
+
+tempest.api.telemetry.test_telemetry_notification_api.TelemetryNotificationAPITestJSON.test_check_glance_v1_notifications
+tempest.api.telemetry.test_telemetry_notification_api.TelemetryNotificationAPITestJSON.test_check_glance_v2_notifications
+tempest.api.telemetry.test_telemetry_notification_api.TelemetryNotificationAPITestJSON.test_check_nova_notification
+
+tempest.api.network.test_networks.BulkNetworkOpsIpV6TestJSON.test_bulk_create_delete_subnet
+tempest.api.network.test_ports.PortsIpV6TestJSON.test_create_update_port_with_second_ip
+tempest.api.network.test_ports.PortsIpV6TestJSON.test_update_port_with_security_group_and_extra_attributes
+tempest.api.network.test_ports.PortsIpV6TestJSON.test_update_port_with_two_security_groups_and_extra_attributes
+
+
+tempest.api.volume.admin.test_volumes_backup.VolumesBackupsTest.test_volume_backup_create_get_detailed_list_restore_delete
+
+tempest.scenario.test_dashboard_basic_ops.TestDashboardBasicOps.test_basic_scenario
+
+
+
+tempest.scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_cryptsetup
+tempest.scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_luks
+tempest.scenario.test_minimum_basic.TestMinimumBasicScenario.test_minimum_basic_scenario
+tempest.scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_pause_unpause
+tempest.scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_reboot
+tempest.scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_rebuild
+tempest.scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_suspend_resume
+tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_hotplug_nic
+tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops
+tempest.scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_cross_tenant_traffic
+tempest.scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_in_tenant_traffic
+tempest.scenario.test_volume_boot_pattern.TestVolumeBootPattern.test_volume_boot_pattern
+tempest.scenario.test_volume_boot_pattern.TestVolumeBootPatternV2.test_volume_boot_pattern
+tempest.scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_multiple_security_groups
+tempest.scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_port_security_disable_security_group
+tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_port_security_macspoofing_port
+tempest.scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_port_update_new_security_group
+tempest.scenario.test_server_basic_ops.TestServerBasicOps.test_server_basicops
+tempest.scenario.test_shelve_instance.TestShelveInstance.test_shelve_instance
+tempest.scenario.test_shelve_instance.TestShelveInstance.test_shelve_volume_backed_instance
+tempest.scenario.test_snapshot_pattern.TestSnapshotPattern.test_snapshot_pattern
+tempest.scenario.test_object_storage_telemetry_middleware.TestObjectStorageTelemetry.test_swift_middleware_notifies
+
+ceilometer.tests.tempest.scenario.test_object_storage_telemetry_middleware.TestObjectStorageTelemetry.test_swift_middleware_notifies
+ceilometer.tests.tempest.api.test_telemetry_notification_api.TelemetryNotificationAPITest.test_check_glance_v1_notifications
+ceilometer.tests.tempest.api.test_telemetry_notification_api.TelemetryNotificationAPITest.test_check_glance_v2_notifications
+ceilometer.tests.tempest.api.test_telemetry_notification_api.TelemetryNotificationAPITest.test_check_nova_notification
