Also blacklist tempest.api.orchestration.stacks.test_stacks.StacksTestJSON.test_stack_crud_no_resources.

--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -37,6 +37,7 @@ tempest.api.orchestration.stacks.test_resource_types.ResourceTypesTest.test_reso
 tempest.api.orchestration.stacks.test_swift_resources.SwiftResourcesTestJSON
 tempest.api.orchestration.stacks.test_templates.TemplateAWSTestJSON
 tempest.api.orchestration.stacks.test_templates.TemplateYAMLTestJSON
+tempest.api.orchestration.stacks.test_stacks.StacksTestJSON.test_stack_crud_no_resources
 
 
 tempest.api.telemetry.test_telemetry_notification_api.TelemetryNotificationAPITestJSON.test_check_glance_v1_notifications
