--- a/saio/swift/proxy-server.conf
+++ b/saio/swift/proxy-server.conf
@@ -84,7 +84,7 @@ eventlet_debug = true
 # The following pipeline shows keystone integration. Comment out the one
 # above and uncomment this one. Additional steps for integrating keystone are
 # covered further below in the filter sections for authtoken and keystoneauth.
-pipeline = catch_errors gatekeeper healthcheck proxy-logging cache container_sync bulk tempurl ratelimit formpost authtoken keystoneauth staticweb container-quotas account-quotas slo dlo versioned_writes proxy-logging proxy-server
+pipeline = catch_errors gatekeeper healthcheck proxy-logging cache container_sync bulk tempurl ratelimit formpost crossdomain authtoken keystoneauth staticweb container-quotas account-quotas slo dlo versioned_writes proxy-logging proxy-server
 
 [app:proxy-server]
 use = egg:swift#proxy
@@ -556,6 +556,10 @@ use = egg:swift#tempurl
 # Note: Put formpost just before your auth filter(s) in the pipeline
 [filter:formpost]
 use = egg:swift#formpost
+
+[filter:crossdomain]
+use = egg:swift#crossdomain
+cross_domain_policy = <allow-access-from domain="*" />
 
 # Note: Just needs to be placed before the proxy-server in the pipeline.
 [filter:name_check]
